# RagDemo

./: .gitignore  Notes.md  README.md  add_hybrid_search.py  add_rag_to_hybrid.py  fix_notebook.py  learnings.md  main.py  pyproject.toml  test_rag_pipeline.py  update_hybrid_nb.py
app/: config.py  doc_loader.py  hybrid_search.py  llm_loader.py  loader.py  rag_chain.py  vector_store.py
data/: information.txt
endpoints/: api.py
experiment/: 1_generate_embeddings.py  2_comapre_similarity.py  3_mini_search_engine.py  4_recursive_text_splitter.py  hybrid_search.ipynb  rag.ipynb  reranker.ipynb
project_related_docs/: Architecture_and_Roadmap.md
rag_edge_cases/: rag_topk_missed_answer_A1.py  rag_topk_missed_answer_A2.py  rag_topk_missed_answer_P.py
ui/: index.html
