[project]
name = "ragdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.12.0",
]
